CallMD/src/objects/Reporting_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reporting_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Providers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Providers</label>
        <referenceTo>Providers__c</referenceTo>
        <relationshipLabel>Reporting Contact</relationshipLabel>
        <relationshipName>Reporting_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Utilization - Monthly</fullName>
                </value>
                <value>
                    <fullName>New Utilization - Individual Program - Monthly</fullName>
                </value>
                <value>
                    <fullName>Utilization - Monthly</fullName>
                </value>
                <value>
                    <fullName>Utilization - Annual</fullName>
                </value>
                <value>
                    <fullName>Utilization - YTD</fullName>
                </value>
                <value>
                    <fullName>Utilization - Cumulative</fullName>
                </value>
                <value>
                    <fullName>Expanded Utilization - Monthly</fullName>
                </value>
                <value>
                    <fullName>Expanded Utilization - Annual</fullName>
                </value>
                <value>
                    <fullName>Expanded Utilization - YTD</fullName>
                </value>
                <value>
                    <fullName>Expanded Utilization - Cumulative</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Program - Monthly</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Program - Year</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Program - YTD</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Employer - Monthly</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Employer - Year</fullName>
                </value>
                <value>
                    <fullName>Expand Utilization - Individual Employer - YTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Contact_Email__c</fullName>
        <label>Reporting Contact Email</label>
        <type>Email</type>
    </fields>
    <label>Reporting Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Contact_Email__c</columns>
        <columns>Report_Name__c</columns>
        <columns>Providers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reporting Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>